--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-
-
-        </div>
+        <div class="container"></div>
 
     </main>
     <footer>
