Cluckin Bell's adv
hahahahaha

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="sibir">
             <ul>
-                <li class="sibir_menu"><a href="#">Посилання на нас:</a></li>
+                <li class="sibir_menu">Посилання на нас:</li>
                 <p></p>
                 <li class="sibir_menu"><a href="#">Електронна пошта</a></li>
                 <li class="sibir_menu"><a href="#">Підтримка</a></li>
@@ -47,7 +47,7 @@
         <div class="adv">
             <li class="sponsor">Спонсор</li>
             <p></p>
-            <img src="css/img/img.jpg" alt="" class="sponsor_img">
+            <a href="https://www.youtube.com/watch?v=qgnUShbkfyk&ab_channel=SmithRussia"><img src="css/img/img.jpg" alt="" class="sponsor_img"></a>
         </div>
 
         <div class="about_us">
