--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <header>
         <img src="css/img/logo_black.png" alt="" class="logo_black">
         <nav>
+            <div class="searchBox">
+                <input type="text" placeholder="Search">
+                <ion-icon name="search-outline"></ion-icon>
+            </div>
             <ul class="menu">
                 <li class="topik_menu"><a href="#">Перші згадки про Рівне</a></li>
                 <li class="topik_menu"><a href="#">Туристичне Рівне</a></li>
@@ -60,6 +64,9 @@
             </ul>
         </div>
     </footer>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    
 </body>
 
 </html>
