--- a/tourist_Rivne/tourist.html
+++ b/tourist_Rivne/tourist.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Рівне</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
 
@@ -13,19 +12,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header>
-        <a href="index.html"><img src="css/img/logo_black.png" alt="" class="logo_black"></a>
+        <a href="../index.html"><img src="css/img/logo_black.png" alt="" class="logo_black"></a>
         <nav>
             <div class="searchBox">
                 <input type="text" placeholder="Search">
                 <ion-icon name="search-outline"></ion-icon>
             </div>
             <ul class="menu">
-                <li class="topik_menu"><a href="history_Rivne/history.html">Перші згадки про Рівне</a></li>
-                <li class="topik_menu"><a href="tourist_Rivne/tourist.html">Туристичне Рівне</a></li>
-                <li class="topik_menu"><a href="nowadays_Rivne/nowadays.html">Рівне - сьогодні</a></li>
+                <li class="topik_menu"><a href="../history_Rivne/history.html">Перші згадки про Рівне</a></li>
+                <li class="active-page"><a href="#">Туристичне Рівне</a></li>
+                <li class="topik_menu"><a href="../nowadays_Rivne/nowadays.html">Рівне - сьогодні</a></li>
             </ul>
         </nav>
     </header>
@@ -68,5 +66,4 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     
 </body>
-
 </html>
