--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="css/img/logo_black.png" alt="" class="logo_black"></a>
+        <div class="logo">
+            <a class="logoLink" href="index.html">
+                <img src="css/img/logo_black.png" alt="" class="logo_black"></a>
+            
+        </div>
         <nav>
             <div class="searchBox">
                 <input type="text" placeholder="Search">
