--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="logo">
             <a class="logoLink" href="index.html">
-                <img src="css/img/logo_black.png" alt="" class="logo_black"></a>
+                <img src="css/img/logo_black.jpg" alt="" class="logo_black"></a>
             
         </div>
         <nav>
