Our shit was fixed successfully!
a oi

--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -15,8 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <a class="logoLink" href="index.html">
-                <img src="css/img/logo_black.png" alt="" class="logo_black"></a>
+            <a href="../index.html"><img src="css/img/logo_black.png" alt="" class="logoLink"></a>
             
         </div>
         <nav>
