--- a/tourist_Rivne/tourist.html
+++ b/tourist_Rivne/tourist.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <a href="../index.html"><img src="css/img/logo_black.png" alt="" class="logo_black"></a>
+        <a href="../index.html"><img src="css/img/logo_black.png" alt="" class="logoLink"></a>
         <nav>
             <div class="searchBox">
                 <input type="text" placeholder="Search">
