--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 <body>
     <header>
         <div class="logo">
-            <a class="logoLink" href="index.html">
+            <a class="logoLink" href="#">
                 <img src="css/img/logo_black.jpg" alt="" class="logo_black"></a>
-            
+
         </div>
+
         <nav>
             <div class="searchBox">
                 <input type="text" placeholder="Search">
