--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <body>
     <header>
         <div class="logo">
-            <a class="logoLink" href="#">
-                <img src="css/img/logo_black.jpg" alt="" class="logo_black"></a>
+            <a href="../index.html"><img src="css/img/logo_black.jpg" alt="" class="logoLink"></a>
 
         </div>
 
