--- a/tourist_Rivne/tourist.html
+++ b/tourist_Rivne/tourist.html
@@ -7,11 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/new-style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/grid-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@599&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -29,45 +31,19 @@
         </nav>
     </header>
     <main>
-            <div class="container">               
-                <div class="block-1">
-                    <img src="css/img/Beer-factory-2-square.jpg" alt="">
-                    <span>Пивзавод</span>
+            <div class="container"> 
+                <div class = "fort-block">
+                    <img src="css/img/Fort-square.jpeg.jpg" class="fort"></img>
+                    <p class = "fort-text">Tarakanivksiy fort</p>
                 </div>
-                <div class="block-2"><span>ЦIкавI мIсця в РIвному</span>
-                    <p>Ми знайшли цікаві фото та невеличку інформацію популярних, туристичних місць Рівного.</p>
+                <div class = "zal-block">
+                    <p class = "zal-text">Органний зал</p>
+                    <img src="css/img/Organ hall-square.jpg" class="zal"></img>
                 </div>
-                <div class="block-3">
-                    <img src="css/img/tunel of love-square-2.jpg" alt="">
-                    <span>Тунель</span>        
-                    <span>кохання</span>            
-                </div>   
-                <div class="block-4">
-                    <img src="css/img/Fort-square.jpeg.jpg" alt="">
-                    <span>Тараканiвський</span>
-                    <span>Форт</span>
-                </div>
-                <div class="block-5">
-                    <div class="shader">
-                        <img src="css/img/Organ hall-square.jpg" alt="">
-                        <span>Органна</span>
-                        <span>зала</span>
-                    </div>
-                </div> 
-                <div class="block-6">
-                    <div class="shader">
-                        <img src="css/img/Museum-quare.jpg" alt="">
-                        
-                        <span>Краезнавчий</span>
-                        <span>Музей</span></div>
-                    </div>
-                <div class="block-7"><span>block-7</span></div>
-                <div class="block-8"><span>block-8</span></div>
-                <div class="block-9">
-                    <img src="css/img/Choha-square.jpg" alt="">
-                    <span>Бункер Ерiка</span>
-                    <span>Кохi</span>
-                </div>      
+                <div class = "bunker-block">
+                    <img src="css/img/Choha.jpg" class="bunker"></img>
+                    <p class = "bunker-text">Бункер Еріка Коха</p>
+                </div>                                  
             </div>
     </main>
     <footer>
@@ -103,6 +79,7 @@
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
     
 </body>
 </html>
