--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html"><img src="css/img/logo_black.jpg" alt="" class="logoLink"></a>
+            <a href="#"><img src="css/img/logo_black.jpg" alt="" class="logoLink"></a>
 
         </div>
 
