tourist-rivne_update

--- a/tourist_Rivne/tourist.html
+++ b/tourist_Rivne/tourist.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Туристичне Рівне</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/new-style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
@@ -34,15 +33,22 @@
             <div class="container"> 
                 <div class = "fort-block">
                     <img src="css/img/Fort-square.jpeg.jpg" class="fort"></img>
-                    <p class = "fort-text">Tarakanivksiy fort</p>
+                    <div class="info-tarFort-block">
+                        <h1 class = "fort-text">Тараканівський Форт</h1>
+                        <p class="add-info-tarFort">
+                            Oборонна споруда та архітектурна пам'ятка XIX століття. Розташована неподалік від села Тараканів Дубенського району Рівненської області, в мальовничій місцевості над річкою Іквою.
+                            <p class="add-info-tarFort">Ззовні він оточений глибоким ровом із земляними валами, укріпленими потужними стінами. В центральній частині форту зведена двоповерхова казарма, до якої ведуть чотири підземні ходи, прокладені під другим земляним валом.</p>
+                        </p>
+                    </div>
                 </div>
                 <div class = "zal-block">
-                    <p class = "zal-text">Органний зал</p>
+                    <h1 class = "zal-text">Органний зал</h1>
                     <img src="css/img/Organ hall-square.jpg" class="zal"></img>
                 </div>
                 <div class = "bunker-block">
-                    <img src="css/img/Choha.jpg" class="bunker"></img>
-                    <p class = "bunker-text">Бункер Еріка Коха</p>
+                    <img src="css/img/koha.png" class="bunker"></img>
+                    <h1 class = "bunker-text">Бункер Еріка Коха</h1>
+                    <p ></p>
                 </div>                                  
             </div>
     </main>
