--- a/tourist_Rivne/tourist.html
+++ b/tourist_Rivne/tourist.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@599&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 <body>
     <header>
@@ -33,22 +33,30 @@
             <div class="container"> 
                 <div class = "fort-block">
                     <img src="css/img/Fort-square.jpeg.jpg" class="fort"></img>
-                    <div class="info-tarFort-block">
-                        <h1 class = "fort-text">Тараканівський Форт</h1>
-                        <p class="add-info-tarFort">
+                    <div class="info-block">
+                        <h1 class = "tittle">Тараканівський Форт</h1>
+                        <p class="add-info">
                             Oборонна споруда та архітектурна пам'ятка XIX століття. Розташована неподалік від села Тараканів Дубенського району Рівненської області, в мальовничій місцевості над річкою Іквою.
-                            <p class="add-info-tarFort">Ззовні він оточений глибоким ровом із земляними валами, укріпленими потужними стінами. В центральній частині форту зведена двоповерхова казарма, до якої ведуть чотири підземні ходи, прокладені під другим земляним валом.</p>
+                            <p class="add-info">Ззовні він оточений глибоким ровом із земляними валами, укріпленими потужними стінами. В центральній частині форту зведена двоповерхова казарма, до якої ведуть чотири підземні ходи, прокладені під другим земляним валом.</p>
                         </p>
                     </div>
                 </div>
                 <div class = "zal-block">
-                    <h1 class = "zal-text">Органний зал</h1>
                     <img src="css/img/Organ hall-square.jpg" class="zal"></img>
+                    <div class="info-block">
+                      <h1 class = "tittle">Органний зал</h1>
+                        <p class="add-info">Рівненська обласна філармонія-філармонія обласного значення в Рівному. Заснована 1939 року. 1987 року відкрилась зала органної та камерної музики, до цього заклад не мав власного місця для виступів.</p>
+                        <p class="add-info">В різний час у філармонії працювали різні колективи та виконавці, серед них хорова капела, лекторські бригади, ансамбль пісні і танцю «Полісся», естрадні колективи за участю І. Поноровської та Л. Доліної, ансамбль пісні і танцю «Зоря».</p>
+                    </div>
                 </div>
                 <div class = "bunker-block">
                     <img src="css/img/koha.png" class="bunker"></img>
-                    <h1 class = "bunker-text">Бункер Еріка Коха</h1>
-                    <p ></p>
+                    <div class = "info-block">
+                        <h1 class = "tittle">Бункер Еріка Коха</h1>
+                        <p class="add-info">
+                            Найбільш утаємничена споруда Рівного — бункер Коха (на знімку). Що таїться в цій бетонній, на три поверхи в глибину, споруді, залишається загадкою ужебільше півстоліття. А що в ній буде в майбутньому? Відповідь на це запитання намагається дати місцевий підприємець Сергій Шабалін, який узяв об’єкт,повністю затоплений, в оренду, плануючи відкрити там музей-кав’ярню.
+                        </p>
+                    </div>
                 </div>                                  
             </div>
     </main>
@@ -68,7 +76,7 @@
         </div>
 
         <div class="adv">
-            <li class="sponsor">Спонсор</li>
+            <h6 class="sponsor">Спонсор<h6>
             <p></p>
             <a href="https://www.youtube.com/watch?v=qgnUShbkfyk&ab_channel=SmithRussia"><img src="css/img/img.jpg" alt="" class="sponsor_img"></a>
         </div>
