--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 
 <body>
@@ -53,7 +54,7 @@
         </div>
 
         <div class="adv">
-            <li class="sponsor">Спонсор</li>
+            <h6 class="sponsor">Спонсор</h6>
             <p></p>
             <a href="https://www.youtube.com/watch?v=qgnUShbkfyk&ab_channel=SmithRussia"><img src="css/img/img.jpg" alt="" class="sponsor_img"></a>
         </div>
@@ -65,11 +66,9 @@
                 <li class="developers"><a href="#">DanilGhosty</a></li>
                 <li class="developers"><a href="#">tema_kuch</a></li>
                 <li class="developers"><a href="#">ch_sanya</a></li>
-                
             </ul>
         </div>
-    </footer>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    </footer>    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     
 </body>
