media for all pages
small problem with search

--- a/tourist_Rivne/tourist.html
+++ b/tourist_Rivne/tourist.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="adv">
-            <h6 class="sponsor">Спонсор<h6>
+            <h6 class="sponsor">Спонсор</h6>
             <p></p>
             <a href="https://www.youtube.com/watch?v=qgnUShbkfyk&ab_channel=SmithRussia"><img src="css/img/img.jpg" alt="" class="sponsor_img"></a>
         </div>
