class_name changes

--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/burger.css">
-
+    <link rel="stylesheet" type="text/css" href="css/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -59,7 +60,7 @@
         </div>
 
         <div class="adv">
-            <li class="sponsor">Спонсор</li>
+            <h6 class="sponsor">Спонсор</h6>
             <p></p>
             <a href="https://www.youtube.com/watch?v=qgnUShbkfyk&ab_channel=SmithRussia"><img src="css/img/img.jpg" alt="" class="sponsor_img"></a>
         </div>
