--- a/tourist_Rivne/tourist.html
+++ b/tourist_Rivne/tourist.html
@@ -35,27 +35,34 @@
                     <img src="css/img/Fort-square.jpeg.jpg" class="fort"></img>
                     <div class="info-block">
                         <h1 class = "fort-title">Тараканівський Форт</h1>
-                        <p class="fort-info">
-                            Oборонна споруда та архітектурна пам'ятка XIX століття. Розташована неподалік від села Тараканів Дубенського району Рівненської області, в мальовничій місцевості над річкою Іквою.
-                            <p class="fort-info">Ззовні він оточений глибоким ровом із земляними валами, укріпленими потужними стінами. В центральній частині форту зведена двоповерхова казарма, до якої ведуть чотири підземні ходи, прокладені під другим земляним валом.</p>
+                        <div class = "fort-info">
+                            <p>
+                            Oборонна споруда та архітектурна пам'ятка XIX століття. Розташована неподалік від села Тараканів Дубенського району Рівненської області, в мальовничій місцевості над річкою Іквою.</p>
+                            <p>Ззовні він оточений глибоким ровом із земляними валами, укріпленими потужними стінами. В центральній частині форту зведена двоповерхова казарма, до якої ведуть чотири підземні ходи, прокладені під другим земляним валом.</p>
                         </p>
+                        </div>
                     </div>
                 </div>
                 <div class = "zal-block">
                     <img src="css/img/Organ hall-square.jpg" class="zal"></img>
                     <div class="info-block">
                       <h1 class = "zal-title">Органний зал</h1>
-                        <p class="zal-info">Рівненська обласна філармонія-філармонія обласного значення в Рівному. Заснована 1939 року. 1987 року відкрилась зала органної та камерної музики, до цього заклад не мав власного місця для виступів.</p>
-                        <p class="zal-info">В різний час у філармонії працювали різні колективи та виконавці, серед них хорова капела, лекторські бригади, ансамбль пісні і танцю «Полісся», естрадні колективи за участю І. Поноровської та Л. Доліної, ансамбль пісні і танцю «Зоря».</p>
+                      <div class = "zal-info">
+                        <p>Рівненська обласна філармонія-філармонія обласного значення в Рівному. Заснована 1939 року. 1987 року відкрилась зала органної та камерної музики, до цього заклад не мав власного місця для виступів.</p>
+                        <p>В різний час у філармонії працювали різні колективи та виконавці, серед них хорова капела, лекторські бригади, ансамбль пісні і танцю «Полісся», естрадні колективи за участю І. Поноровської та Л. Доліної, ансамбль пісні і танцю «Зоря».</p>
                     </div>
+                    </div>
+                    
                 </div>
                 <div class = "bunker-block">
                     <img src="css/img/koha.png" class="bunker"></img>
                     <div class = "info-block">
                         <h1 class = "bunker-title">Бункер Еріка Коха</h1>
-                        <p class="bunker-info">
+                        <div class="bunker-info">
+                        <p>
                             Найбільш утаємничена споруда Рівного — бункер Коха (на знімку). Що таїться в цій бетонній, на три поверхи в глибину, споруді, залишається загадкою ужебільше півстоліття. А що в ній буде в майбутньому? Відповідь на це запитання намагається дати місцевий підприємець Сергій Шабалін, який узяв об’єкт,повністю затоплений, в оренду, плануючи відкрити там музей-кав’ярню.
                         </p>
+                    </div>
                     </div>
                 </div>                                  
             </div>
