--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -41,7 +41,11 @@
         </nav>
     </header>
     <main>
-        <div class="container"></div>
+        <div class = "line"></div>
+        <div class = "circle_years">
+            <p class = "year">2022</p>
+        </div>
+        
 
     </main>
     <footer>
@@ -78,5 +82,6 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="burger_script.js"></script>
+    <script src="anim_line.js"></script>
 </body>
 </html>
