burger_menu visible, search delete

--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -21,11 +21,11 @@
             
         </div>
         <nav>
-            <div class="searchBox">
-                <input type="text" placeholder="Search">
-                <ion-icon name="search-outline"></ion-icon>
-            </div>
-
+            <ul class="menu">
+                <li class="topik_menu"><a href="../history_Rivne/history.html">Перші згадки про Рівне</a></li>
+                <li class="topik_menu"><a href="../tourist_Rivne/tourist.html">Туристичне Рівне</a></li>
+                <li class="active-page"><a href="#">Рівне - сьогодні</a></li>
+            </ul>
 
             <div class="burger-menu">
                 <a href="" class="burger-menu_button">
@@ -79,8 +79,6 @@
             </ul>
         </div>
     </footer>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="burger_script.js"></script>
     <script src="anim_line.js"></script>
 </body>
