--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
         </div>
 
         <nav>
-            <div class="searchBox">
-                <input type="text" placeholder="Search">
-                <ion-icon name="search-outline"></ion-icon>
-            </div>
             <ul class="menu">
                 <li class="topik_menu"><a href="history_Rivne/history.html">Перші згадки про Рівне</a></li>
                 <li class="topik_menu"><a href="tourist_Rivne/tourist.html">Туристичне Рівне</a></li>
@@ -68,8 +64,7 @@
                 <li class="developers"><a href="#">ch_sanya</a></li>
             </ul>
         </div>
-    </footer>    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    </footer>
     
 </body>
 
