--- a/tourist_Rivne/tourist.html
+++ b/tourist_Rivne/tourist.html
@@ -8,25 +8,33 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/new-style.css">
+    <link rel="stylesheet" type="text/css" href="css/media.css">
+    <link rel="stylesheet" type="text/css" href="css/burger.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@599&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 <body>
     <header>
         <a href="../index.html"><img src="css/img/logo_black.png" alt="" class="logoLink"></a>
          <nav>
-            <div class="searchBox">
-                <input type="text" placeholder="Search">
-                <ion-icon name="search-outline"></ion-icon>
-            </div>
             <ul class="menu">
                 <li class="topik_menu"><a href="../history_Rivne/history.html">Перші згадки про Рівне</a></li>
                 <li class="active-page"><a href="#">Туристичне Рівне</a></li>
                 <li class="topik_menu"><a href="../nowadays_Rivne/nowadays.html">Рівне - сьогодні</a></li>
             </ul>
+            <div class="burger-menu">
+                <a href="" class="burger-menu_button">
+                  <span class="burger-menu_lines"></span>
+                </a>
+                <nav class="burger-menu_nav">
+                    <a class="burger-menu_link" href="#">Перші згадки про Рівне</a>
+                    <a class="burger-menu_link" href="../tourist_Rivne/tourist.html">Туристичне Рівне</a>
+                    <a class="burger-menu_link" href="../nowadays_Rivne/nowadays.html">Рівне - сьогодні</a>
+                </nav>
+                <div class="burger-menu_overlay"></div>
+            </div>
         </nav>
     </header>
     <main>
@@ -98,10 +106,8 @@
             </ul>
         </div>
     </footer>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script type="text/javascript" src = "script.js"></script>
-
+    <script type="text/javascript" src = "burger_script.js"></script>
     
 </body>
 </html>
