--- a/nowadays_Rivne/nowadays.html
+++ b/nowadays_Rivne/nowadays.html
@@ -66,9 +66,9 @@
             <ul>
                 <li class="developers">Розробники:</li>
                 <p></p>
-                <li class="developers"><a href="#">DanilGhosty</a></li>
-                <li class="developers"><a href="#">tema_kuch</a></li>
-                <li class="developers"><a href="#">ch_sanya</a></li>
+                <li class="developers"><a href="../info_us/index_info.html">DanilGhosty</a></li>
+                <li class="developers"><a href="../info_us/index_info.html">tema_kuch</a></li>
+                <li class="developers"><a href="../info_us/index_info.html">ch_sanya</a></li>
             </ul>
         </div>
     </footer>
