--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -24,7 +24,7 @@
             <ul class="menu">
                 <li class="topik_menu"><a href="../history_Rivne/history.html">Перші згадки про Рівне</a></li>
                 <li class="topik_menu"><a href="../tourist_Rivne/tourist.html">Туристичне Рівне</a></li>
-                <li class="active-page"><a href="#">Рівне - сьогодні</a></li>
+                <li class="active-page"><a href="../nowadays_Rivne/nowadays.html">Рівне - сьогодні</a></li>
             </ul>
 
             <div class="burger-menu">
@@ -43,10 +43,14 @@
     <main>
         <div class = "line"></div>
         <div class = "circle_years">
-            <p class = "year">2022</p>
+            <p class = "year">1914-1918</p>
         </div>
-        
-
+        <div class = "info-block">
+            <div class = "first_period">
+                <img src="css/img/first_world_war.jpg" alt="" class = "img_first_war">
+                <p class = "info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, itaque officia eaque incidunt consequatur possimus voluptatum expedita tempora hic ipsa, quam, voluptate natus! Quibusdam mollitia nulla rem beatae, similique labore.</p>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="logo_div">
