--- a/nowadays_Rivne/nowadays.html
+++ b/nowadays_Rivne/nowadays.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
 
@@ -26,7 +28,7 @@
             </ul>
             <div class="burger-menu">
                 <a href="" class="burger-menu_button">
-                  <span class="burger-menu_lines"></span>
+                    <span class="burger-menu_lines"></span>
                 </a>
                 <nav class="burger-menu_nav">
                     <a class="burger-menu_link" href="#">Перші згадки про Рівне</a>
@@ -38,8 +40,19 @@
         </nav>
     </header>
     <main>
-        <div class="container"></div>
+        <div class="container">
+            <div class="text">
+                <p>На перший погляд, Рівне — звичайне провінційне місто, яке волею долі стало “столицею” однієї з областей України. На перший погляд, нічим не визначне, але це лише на перший погляд…</p>
 
+                <p>Місто Рівне - це місто обласного значення в Україні, обласний центр Рівненської області, центр Рівненського району Рівненської області. Рівне є значним осередком культури держави - тут працюють театри (обласний муздрамтеатр, ляльковий
+                    і декілька театрів-студій), філармонія, зал камерної та органної музики, низка музеїв, палаців і будинків культури, кінотеатрів, численні бібліотеки; у місті є декілька парків та зоопарк. </p>
+                <p>Місто перетинає річка Устя, ліва притока річки Горинь </p>
+                <p>Площа міста:63км²</p>
+                <p>Населення: 248,6 тис. мешканців (2015 р.) </p>
+                <p>Густота населення: 3962 осіб/км² </p>
+                <p>День міста: остання неділя серпня</p>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="logo_div">
@@ -72,6 +85,7 @@
             </ul>
         </div>
     </footer>
-    <script type="text/javascript" src = "burger_script.js"></script>
+    <script type="text/javascript" src="burger_script.js"></script>
 </body>
+
 </html>
