photoes for history.html

--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -51,20 +51,19 @@
             <div class = "first_period">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide">Slide 1</div>
-                      <div class="swiper-slide">Slide 2</div>
-                      <div class="swiper-slide">Slide 3</div>
-                      <div class="swiper-slide">Slide 4</div>
-                      <div class="swiper-slide">Slide 5</div>
-                      <div class="swiper-slide">Slide 6</div>
-                      <div class="swiper-slide">Slide 7</div>
-                      <div class="swiper-slide">Slide 8</div>
-                      <div class="swiper-slide">Slide 9</div>
+                      <div class="swiper-slide"><img src="css/img/1.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/2.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/3.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/4.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/5.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/6.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/7.jpg" alt=""></div>
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
                   </div>
-                <p class = "info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, itaque officia eaque incidunt consequatur possimus voluptatum expedita tempora hic ipsa, quam, voluptate natus! Quibusdam mollitia nulla rem beatae, similique labore.</p>
+                <p class = "info">Рівне — місто прифронтове
+                    Перед Першою Світовою в Рівному, яке тоді входило до складу Волинської губернії, мешкали трохи більше 24-х тисяч осіб. Хоча Рівнещина до середини 1915 року вважалася тиловою територією, однак подих війни відчула на собі сповна. У Рівному дислокувалися численні військові підрозділи, розташовувалися штаби кількох армій Південно-Західного фронту. До рівненських шпиталів масово звозили поранених. Місто нагадувало переповнений мурашник, у якому кожен намагався пристосуватися аби вижити.</p>
             </div>
         </div>
     </main>
