update for history, footer

--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -51,20 +51,24 @@
             <div class = "first_period">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide"><img src="css/img/1.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/2.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/3.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/4.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/5.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/6.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/7.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/1.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/2.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/3.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/4.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/5.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/6.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/7.jpg" alt=""></div>
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
-                  </div>
-                <p class = "info">Рівне — місто прифронтове
+                    </div>
+                  <div class = "bg">
+                    <p class = "info">Рівне — прифронтове місто.
                     Перед Першою Світовою в Рівному, яке тоді входило до складу Волинської губернії, мешкали трохи більше 24-х тисяч осіб. Хоча Рівнещина до середини 1915 року вважалася тиловою територією, однак подих війни відчула на собі сповна. У Рівному дислокувалися численні військові підрозділи, розташовувалися штаби кількох армій Південно-Західного фронту. До рівненських шпиталів масово звозили поранених. Місто нагадувало переповнений мурашник, у якому кожен намагався пристосуватися аби вижити.</p>
-            </div>
+                  </div>
+                </div>
+             <div class="second_period">
+             </div>
         </div>
     </main>
     <footer>
@@ -87,7 +91,6 @@
             <p></p>
             <a href="https://www.youtube.com/watch?v=qgnUShbkfyk&ab_channel=SmithRussia"><img src="css/img/img.jpg" alt="" class="sponsor_img"></a>
         </div>
-
         <div class="about_us">
             <ul>
                 <li class="developers">Розробники:</li>
