small changes in history

--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -43,7 +43,6 @@
         </nav>
     </header>
     <main>
-        <div class = "line"></div>
         <div class = "circle_years">
             <p class = "year">1914-1918</p>
         </div>
@@ -68,6 +67,23 @@
                   </div>
                 </div>
              <div class="second_period">
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide"><img src="css/img/WW1-img/1.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/2.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/3.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/4.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/5.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/6.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW1-img/7.jpg" alt=""></div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    </div>
+                  <div class = "bg">
+                    <p class = "info">Рівне — прифронтове місто.
+                    Перед Першою Світовою в Рівному, яке тоді входило до складу Волинської губернії, мешкали трохи більше 24-х тисяч осіб. Хоча Рівнещина до середини 1915 року вважалася тиловою територією, однак подих війни відчула на собі сповна. У Рівному дислокувалися численні військові підрозділи, розташовувалися штаби кількох армій Південно-Західного фронту. До рівненських шпиталів масово звозили поранених. Місто нагадувало переповнений мурашник, у якому кожен намагався пристосуватися аби вижити.</p>
+                  </div>
              </div>
         </div>
     </main>
