--- a/nowadays_Rivne/nowadays.html
+++ b/nowadays_Rivne/nowadays.html
@@ -40,17 +40,23 @@
         </nav>
     </header>
     <main>
+        <div>
+            <img src="css/img/img.jpg" alt="img">
+        </div>
         <div class="container">
-            <div class="text">
+            <div class="text">  
                 <p>На перший погляд, Рівне — звичайне провінційне місто, яке волею долі стало “столицею” однієї з областей України. На перший погляд, нічим не визначне, але це лише на перший погляд…</p>
 
                 <p>Місто Рівне - це місто обласного значення в Україні, обласний центр Рівненської області, центр Рівненського району Рівненської області. Рівне є значним осередком культури держави - тут працюють театри (обласний муздрамтеатр, ляльковий
                     і декілька театрів-студій), філармонія, зал камерної та органної музики, низка музеїв, палаців і будинків культури, кінотеатрів, численні бібліотеки; у місті є декілька парків та зоопарк. </p>
                 <p>Місто перетинає річка Устя, ліва притока річки Горинь </p>
+            </div>
+            <div class="properties">
                 <p>Площа міста:63км²</p>
                 <p>Населення: 248,6 тис. мешканців (2015 р.) </p>
                 <p>Густота населення: 3962 осіб/км² </p>
                 <p>День міста: остання неділя серпня</p>
+            </div>
             </div>
         </div>
     </main>
