text_changes_year

--- a/nowadays_Rivne/nowadays.html
+++ b/nowadays_Rivne/nowadays.html
@@ -45,11 +45,11 @@
         </div>
         <div class="container">
             <div class="text">  
-                <p>На перший погляд, Рівне — звичайне провінційне місто, яке волею долі стало “столицею” однієї з областей України. На перший погляд, нічим не визначне, але це лише на перший погляд…</p>
+                <p class = "info">На перший погляд, Рівне — звичайне провінційне місто, яке волею долі стало “столицею” однієї з областей України. На перший погляд, нічим не визначне, але це лише на перший погляд…</p>
 
-                <p>Місто Рівне - це місто обласного значення в Україні, обласний центр Рівненської області, центр Рівненського району Рівненської області. Рівне є значним осередком культури держави - тут працюють театри (обласний муздрамтеатр, ляльковий
+                <p class = "info">Місто Рівне - це місто обласного значення в Україні, обласний центр Рівненської області, центр Рівненського району Рівненської області. Рівне є значним осередком культури держави - тут працюють театри (обласний муздрамтеатр, ляльковий
                     і декілька театрів-студій), філармонія, зал камерної та органної музики, низка музеїв, палаців і будинків культури, кінотеатрів, численні бібліотеки; у місті є декілька парків та зоопарк. </p>
-                <p>Місто перетинає річка Устя, ліва притока річки Горинь </p>
+                <p class = "info">Місто перетинає річка Устя, ліва притока річки Горинь </p>
             </div>
             <div class="properties">
                 <p>Площа міста:63км²</p>
