fix burger script

--- a/nowadays_Rivne/nowadays.html
+++ b/nowadays_Rivne/nowadays.html
@@ -31,7 +31,7 @@
                     <span class="burger-menu_lines"></span>
                 </a>
                 <nav class="burger-menu_nav">
-                    <a class="burger-menu_link" href="#">Перші згадки про Рівне</a>
+                    <a class="burger-menu_link" href="../tourist_Rivne/tourist.html">Перші згадки про Рівне</a>
                     <a class="burger-menu_link" href="../tourist_Rivne/tourist.html">Туристичне Рівне</a>
                     <a class="burger-menu_link" href="../nowadays_Rivne/nowadays.html">Рівне - сьогодні</a>
                 </nav>
@@ -91,7 +91,7 @@
             </ul>
         </div>
     </footer>
-    <script type="text/javascript" src="burger_script.js"></script>
+    <script src="burger_script.js"></script>
 </body>
 
 </html>
