--- a/tourist_Rivne/tourist.html
+++ b/tourist_Rivne/tourist.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/new-style.css">
-    <link rel="stylesheet" type="text/css" href="css/media.css">
     <link rel="stylesheet" type="text/css" href="css/burger.css">
+    <link rel="stylesheet" type="text/css" href="css/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
@@ -107,7 +107,7 @@
         </div>
     </footer>
     <script type="text/javascript" src = "script.js"></script>
-    <script type="text/javascript" src = "burger_script.js"></script>
+    <script src = "burger_script.js"></script>
     
 </body>
 </html>
