--- a/nowadays_Rivne/nowadays.html
+++ b/nowadays_Rivne/nowadays.html
@@ -40,8 +40,18 @@
         </nav>
     </header>
     <main>
-        <div>
-            <img src="css/img/img.jpg" alt="img">
+        <div class="photo_container">
+            <img src="img/DSC_0546.jpg" class="photo_content">
+            <img src="img/DSC_0558.jpg" class="photo_content">
+            <img src="img/DSC_0563.jpg" class="photo_content">
+            <img src="img/DSC_0572.jpg" class="photo_content">
+            <img src="img/DSC_0583.jpg" class="photo_content">
+            <img src="img/DSC_0628.jpg" class="photo_content">
+            <img src="img/DSC_0631.jpg" class="photo_content">
+            <img src="img/DSC_0646.jpg" class="photo_content">
+            <img src="img/DSC_0658.jpg" class="photo_content">
+            <img src="img/DSC_0736.jpg" class="photo_content">
+            <!-- <img src="css/img/img.jpg" alt="img"> -->
         </div>
         <div class="container">
             <div class="text">  
@@ -49,9 +59,10 @@
 
                 <p class = "info">Місто Рівне - це місто обласного значення в Україні, обласний центр Рівненської області, центр Рівненського району Рівненської області. Рівне є значним осередком культури держави - тут працюють театри (обласний муздрамтеатр, ляльковий
                     і декілька театрів-студій), філармонія, зал камерної та органної музики, низка музеїв, палаців і будинків культури, кінотеатрів, численні бібліотеки; у місті є декілька парків та зоопарк. </p>
-                <p class = "info">Місто перетинає річка Устя, ліва притока річки Горинь </p>
+                <p class = "info"> </p>
             </div>
             <div class="properties">
+                <p>Місто перетинає річка Устя, ліва притока річки Горинь</p>
                 <p>Площа міста:63км²</p>
                 <p>Населення: 248,6 тис. мешканців (2015 р.) </p>
                 <p>Густота населення: 3962 осіб/км² </p>
