--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -66,25 +66,39 @@
                     Перед Першою Світовою в Рівному, яке тоді входило до складу Волинської губернії, мешкали трохи більше 24-х тисяч осіб. Хоча Рівнещина до середини 1915 року вважалася тиловою територією, однак подих війни відчула на собі сповна. У Рівному дислокувалися численні військові підрозділи, розташовувалися штаби кількох армій Південно-Західного фронту. До рівненських шпиталів масово звозили поранених. Місто нагадувало переповнений мурашник, у якому кожен намагався пристосуватися аби вижити.</p>
                   </div>
                 </div>
-             <div class="second_period">
+                <div class="second_period">
+                  <div class="swiper mySwiper">
+                      <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="css/img/WW2-img/1.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="css/img/WW2-img/2.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="css/img/WW2-img/3.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="css/img/WW2-img/4.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="css/img/WW2-img/5.jpg" alt=""></div>
+                      </div>
+                      <div class="swiper-button-next"></div>
+                      <div class="swiper-button-prev"></div>
+                      </div>
+                    <div class = "bg">
+                      <p class = "info">Райхскомісаріа́т Украї́на — адміністративне утворення, що охоплювало частину сучасних українських та білоруських земель у 1941–1944 роках. Очолював Рейхскомісаріат гауляйтер і оберпрезидент Еріх Кох. Це адміністративне утворення контролювалося і підпорядковувалося нацистській Німеччині, проте не входило до її складу. Райхскомісаріат Україна було проголошено 1 вересня 1941 року. Столицею Райхскомісаріату стало місто Рівне. Тут зосередились основні адміністративні та тилові установи, що діяли на території окупованої України. Ще влітку 1941 було створено міську управу Рівного, яку очолив фармацевт Полікарп Бульба, після нього цю посаду займав професор гімназії Іван Сав’юк. У Рівному восени 1941 року німці знищили 20 000 євреїв в урочищі Сосонки, що становило 50% населення міста того часу.</p>
+                    </div>
+               </div>
+               <div class="third_period">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide"><img src="css/img/WW1-img/1.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/WW1-img/2.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/WW1-img/3.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/WW1-img/4.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/WW1-img/5.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/WW1-img/6.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/WW1-img/7.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW2-img/1.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW2-img/2.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW2-img/3.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW2-img/4.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/WW2-img/5.jpg" alt=""></div>
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
                     </div>
                   <div class = "bg">
-                    <p class = "info">Рівне — прифронтове місто.
-                    Перед Першою Світовою в Рівному, яке тоді входило до складу Волинської губернії, мешкали трохи більше 24-х тисяч осіб. Хоча Рівнещина до середини 1915 року вважалася тиловою територією, однак подих війни відчула на собі сповна. У Рівному дислокувалися численні військові підрозділи, розташовувалися штаби кількох армій Південно-Західного фронту. До рівненських шпиталів масово звозили поранених. Місто нагадувало переповнений мурашник, у якому кожен намагався пристосуватися аби вижити.</p>
+                    <p class = "info">Після закінчення Другої світової війни Рівненщина почала розвиватись. З 1966 у культурному плані відбулося чимало подій: на місці Берестецької битви створено заповідник "Козацькі могили", пізніше розпачав своє функціонування музей на тому ж місці. Наступного року закінчилось будівництво кінотеатру "Жовтень"(нині "Україна"). У 1974 році відбулось значне поліпшення пересування містом, а саме розпочали курсувати тролейбуси. Через два роки збудовано аеропорт міжнародного класу. В цей самий період рівненський зоопарк та ляльковий театр почали приймати відвідувачів.</p>
                   </div>
-             </div>
+               </div>
+              </div>
         </div>
     </main>
     <footer>
