--- a/info_us/index_info.html
+++ b/info_us/index_info.html
@@ -53,7 +53,6 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="swiper-body">
-                        slide-2
                     </div>
                     <div class="swiper-footer">
                         <div class="swiper-info">
@@ -75,7 +74,7 @@
                     </div>
                     <div class="swiper-footer">
                         <div class="swiper-info">
-                            <p class="swiper-info__author">Автор: Олександир Чернюк</p>
+                            <p class="swiper-info__author">Автор: Олександр Чернюк</p>
                             <p class="swiper-info__item">
                                 <a href="https://www.instagram.com/ch_sanya03/"><img src="./css/images/insta.svg" alt=""></a>
                                 <a href="https://www.instagram.com/ch_sanya03/"><span>Instagram</span></a>
